    Regression introduced in dpkg 1.16.0. Fixes CVE-2014-8625. Closes: #768485
    Reported by Joshua Rogers <megamansec@gmail.com>.
  * Do not match partial field names in control files. Closes: #769119
    Regression introduced in dpkg 1.10.
  * Fix build on Mac OS X. Regression introduced in dpkg 1.17.11.
    Reported by Dominyk Tiller <dominyktiller@gmail.com>.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * French (Sébastien Poher).
  * Simplified Chinese (Zhou Mo). Closes: #766724, #770280
  * Swedish (Peter Krefting).
  * Vietnamese (Trần Ngọc Quân)

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * French (Sébastien Poher).
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann). Closes: #752123
  * French (Sébastien Poher). Closes: #767934
  * Simplified Chinese (Zhou Mo). Closes: #767573
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * French (Sébastien Poher). Closes: #767918
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sat, 25 Oct 2014 03:45:43 +0200

dpkg (1.17.21) unstable; urgency=low

  [ Guillem Jover ]
  * Get consistent git-style diff support, by adding (>= 2.7) to the dpkg-dev
    patch Depends, and a Breaks patch (<< 2.7) to libdpkg-perl.
  * Error out on obsolete Build-Profiles field syntax.
  * Document -g and -G options in dpkg-genchanges(1). Closes: #766568
  * Do not accept values bundled with long options in dpkg-parsechangelog.
    The parser was accepting things like «--count10», which is just broken.
    Instead allow only «--count=10» in addition to «--count 10».
  * Accept «-S value» in addition to «-Svalue» in dpkg-parsechangelog.
    Closes: #766559
  * Add support for new interest-await and activate-await trigger directives.
    And a new --await option to dpkg-trigger. This might allow possibly
    switching the default meaning after a transition period no shorter than