@@ -19,6 +19,8 @@ dpkg (1.17.22) UNRELEASED; urgency=low
     Regression introduced in dpkg 1.10.
   * Fix build on Mac OS X. Regression introduced in dpkg 1.17.11.
     Reported by Dominyk Tiller <dominyktiller@gmail.com>.
+  * Normalize tar entry uid and gid from the current system only in dpkg
+    unpack. Regression introduced in dpkg 1.17.14. Closes: #769211
 
   [ Updated programs translations ]
   * German (Sven Joachim).
